Changes after scanning with Sonarlint